--- a/templates/about.html
+++ b/templates/about.html
@@ -157,7 +157,7 @@
 			    <li>
 			      <div class="content", id = "tile2">
 			      	<div class = "row">
-				      	<div class = "col-md-9">
+				      	<div class = "col-md-3 " style="margin: 25px 0px;">
 				      		<img class="img-fluid mx-auto d-block mb-30" src="img/icon1.png" alt="">
 				      	</div>
 				      	<div class = "col-md-9">
@@ -178,8 +178,8 @@
 			    <li>
 			      <div class="content", id = "tile3">
 			      	<div class= "row">
-			      		<div class = "col-md-6">
-				      		<img class="img-fluid mx-auto d-block mb-30" src="img/coach.png" alt="">
+			      		<div class = "col-md-3" style="margin: 15px 0px;">
+				      		<img class="img-fluid mx-auto d-block mb-50" src="img/coach.png" alt="">
 				      	</div>
 				      	<div class = "col-md-9">
 					        <h4>
@@ -199,10 +199,10 @@
 			    <li>
 			      <div class="content", id = "tile4">
 			      	<div class = "row">
-			      	<div class = "col-sm-6"><img class="img-fluid mx-auto d-block mb-30" src="img/work.png" alt=""></div>
+			      	<div class = "col-sm-3" style="margin: 25px 0px;"><img class="img-fluid mx-auto d-block mb-30" src="img/work.png" alt=""></div>
 
 			      	<script type="text/javascript"> hover_inout("tile4", "detail4");</script>
-				        <div class = "col-md-6">
+				        <div class = "col-md-9">
 				        <h4>
 				          <time>Data Science Intern</time>
 				        </h4>
@@ -219,10 +219,10 @@
 					 <div class="content" id = "tile5" >
 					 	<script type="text/javascript"> hover_inout("tile5", "detail5");</script>
 					 	<div class = "row">
-					 		<div class = "col-md-6">
+					 		<div class = "col-md-3" style="margin: 25px 0px;">
 			      				<img class="img-fluid mx-auto d-block mb-30" src="img/work.png" alt="">
 			      			</div>
-			      			<div class = "col-md-6">
+			      			<div class = "col-md-9">
 								 <h4>
 									 <time>Research Intern</time>
 								 </h4>
@@ -239,10 +239,10 @@
 					 <div class="content" id = "tile6">
 					 	<script type="text/javascript"> hover_inout("tile6", "detail6");</script>
 					 	<div class = "row">
-					 		<div class = "col-md-3">
+					 		<div class = "col-md-3" style="margin: 25px 0px;">
 				      			<img class="img-fluid mx-auto d-block mb-30" src="img/work.png" alt="">
 				      		</div>
-					      	<div class = "col-lg-8">
+					      	<div class = "col-md-9">
 							 <h4>
 								 <time>Data Science Intern</time>
 							 </h4>
@@ -258,7 +258,7 @@
 					 <div class="content" id = "tile7">
 					 	<script type="text/javascript"> hover_inout("tile7", "detail7");</script>
 					 	<div class = "row">
-					 		<div class = "col-md-3">
+					 		<div class = "col-md-3" style="margin: 25px 0px;">
 						 	<img class="img-fluid mx-auto d-block mb-30" src="img/work.png" alt="">
 						 	</div>
 						 	<div class = "col-md-9">
@@ -277,10 +277,10 @@
 					 <div class="content" id = "tile8">
 					 	<script type="text/javascript"> hover_inout("tile8", "detail8");</script>
 					 	<div class = "row">
-					 		<div class = "col-md-6">
+					 		<div class = "col-md-3" style="margin: 25px 0px;">
 						 		<img class="img-fluid mx-auto d-block mb-30" src="img/work.png" alt="">
 							</div>
-							<div class = "col-md-6">
+							<div class = "col-md-9">
 								 <h4>
 									 <time>Data Scientist</time>
 								 </h4>
