--- a/templates/index.html
+++ b/templates/index.html
@@ -228,19 +228,23 @@
             <div class="menu-content">
                <div class="title text-center">
                   <h1 class="mb-10">Skills Expertisse</h1>
-                  1 - Basic <span style="display: inline-block; width: 2ch;">&#9;</span>
-                  2 - Novice <span style="display: inline-block; width: 2ch;">&#9;</span>
-                  3 - Intermediate<span style="display: inline-block; width: 2ch;">&#9;</span>
-                  <p>4 - Advanced<span style="display: inline-block; width: 2ch;">&#9;</span>
-                     5 - Expert
-                  <p/>
-               </div>
+                  <div class="row"style="place-content: center;">
+                     <p>1 - Basic <span style="display: inline-block; width: 2ch;">&#9;</span></p>
+                     <p>
+                     <p>2 - Novice <span style="display: inline-block; width: 2ch;">&#9;</span></p>
+                     <p>3 - Intermediate<span style="display: inline-block; width: 2ch;">&#9;</span></p>
+                     <p>4 - Advanced<span style="display: inline-block; width: 2ch;">&#9;</span></p>
+                     <p>5 - Expert<span style="display: inline-block; width: 2ch;">&#9;</span></p>
+                  </div>
             </div>
          </div>
          <div class="container">
             <div class="row skillbar-wraps">
                <div class="col-lg-4 skill-left">
                   <h4 class="text-center pt-50"> Devops </h4>
+                  <div class="progress" style="height: 6%;">
+  <div class="progress-bar" role="progressbar" style="width: 25%; color: #ffffff;" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100">Programming 25%</div>
+</div>
                   <div class="single-skill">
                      <p>
                         Programming - 5
@@ -411,7 +415,7 @@
       <hr>
       <!-- Start price Area -->
       <section class="price-area section-gap">
-         <div class="container">
+         <div class="container"style="margin-top: -60px;">
             <div class="row d-flex justify-content-center">
                <div class="menu-content pb-20 col-lg-8">
                   <div class="title text-center">
@@ -423,7 +427,7 @@
                <div class="col-lg-6 col-md-6 single-price">
                   <a href="https://github.com/ritikjain51" target="_blank">
                      <div class="top-part">
-                        <img src="https://www.vectorlogo.zone/logos/gitlab/gitlab-tile.svg" height=300 width=300>
+                        <img src="https://www.vectorlogo.zone/logos/gitlab/gitlab-tile.svg" height=100 width=100>
                         <h4>GIT</h4>
                         <p class="mt-10">Git have most of my projects.</p>
                      </div>
@@ -432,7 +436,7 @@
                <div class="col-lg-6 col-md-6 single-price">
                   <a href="https://medium.com/@ritikjain51" target="_blank">
                      <div class="top-part">
-                        <img src="img/medium3.jpg" height=300 width=300>
+                        <img src="img/medium3.jpg" height=100 width=100>
                         <h4>Medium</h4>
                         <p class="mt-10">Check for interesting and brief topics of Machine Learning</p>
                      </div>
@@ -479,11 +483,11 @@
                      function initMap() {
                      var uluru = {lat: 12.9716, lng: 77.5946};
                      var map = new google.maps.Map(
-                      document.getElementById('googleMap'), {zoom: 4, center: uluru});
+                      document.getElementById('googleMap'), {zoom: 13, center: uluru});
                      var marker = new google.maps.Marker({position: uluru, map: map});
                      }
                      </script>
-                     <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyA1rTWgvA2W2-8tASXsyHwchiKAb6K52nk&callback=initMap"/>
+                     <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyA9QGqY00Nb6POumUnyO1Q7nt63WcctTOU&callback=initMap"/>
                </div>
             </div>
          </div>
