--- a/templates/index.html
+++ b/templates/index.html
@@ -490,7 +490,10 @@
             </div>
          </div>
       </footer>
-      <!-- End footer Area -->
+	  <!-- End footer Area -->
+	  <script src = "http://code.jquery.com/jquery-latest.js"/>
+	  <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js" type="text/javascript"></script>
+
       <script src="js/vendor/jquery-2.2.4.min.js"></script>
       <script src="js/popper.min.js"></script>
       <script src="js/vendor/bootstrap.min.js"></script>
