--- a/templates/index.html
+++ b/templates/index.html
@@ -371,7 +371,7 @@
                <div class="single-recent-blog col-lg-4 col-md-4">
                   <div class="thumb">
                      <a href="https://github.com/harrisonjansma/Analyzing_Medium" target="_blank">
-                     <img class="f-img img-fluid" src="img/heavy_metal.jpg" alt="">
+                     <img class="f-img img-fluid" src="img/heavy_metal4.jpg" alt="">
                      </a>
                   </div>
                   <div class="bottom d-flex justify-content-between align-items-center flex-wrap">
@@ -389,7 +389,7 @@
                <div class="single-recent-blog col-lg-4 col-md-4">
                   <div class="thumb">
                      <a href="https://towardsdatascience.com/how-to-learn-data-science-if-youre-broke-7ecc408b53c7" target="_blank">
-                     <img class="f-img img-fluid" src="img/heavy_metal.jpg" alt="">
+                     <img class="f-img img-fluid" src="img/heavy_metal4.jpg" alt="">
                      </a>
                   </div>
                   <div class="bottom d-flex justify-content-between align-items-center flex-wrap">
