--- a/templates/index.html
+++ b/templates/index.html
@@ -83,7 +83,7 @@
                </div>
                <nav id="nav-menu-container">
                   <ul class="nav-menu">
-                     <li><a href="index.html">Home</a></li>
+                     <li><a href="index.html" >Home</a></li>
                      <li><a href="about.html">About</a></li>
                      <!-- <li><a href="archive.html" class = "disabled">Portfolio</a></li> -->
                      <li><a href="RitikResume.pdf" class="genric-btn primary-border circle" target="_blank">Resume</a></li>
@@ -421,8 +421,8 @@
                   </div>
                </div>
             </div>
-            <div class="row">
-               <div class="col-lg-6 col-md-6 single-price">
+            <div class="row" style="justify-content: center;">
+               <div class="col-lg-3 col-md-3 single-price" style="margin:0px 40px;">
                   <a href="https://github.com/ritikjain51" target="_blank">
                      <div class="top-part">
                         <img src="https://www.vectorlogo.zone/logos/gitlab/gitlab-tile.svg" height=100 width=100>
@@ -431,7 +431,7 @@
                      </div>
                   </a>
                </div>
-               <div class="col-lg-6 col-md-6 single-price">
+               <div class="col-lg-3 col-md-3 single-price"style="margin:0px 40px;">
                   <a href="https://medium.com/@ritikjain51" target="_blank">
                      <div class="top-part">
                         <img src="img/medium3.jpg" height=100 width=100>
@@ -440,6 +440,7 @@
                      </div>
                   </a>
                </div>
+
             </div>
          </div>
       </section>
