--- a/templates/index.html
+++ b/templates/index.html
@@ -78,7 +78,7 @@
             <div class="row align-items-center justify-content-between d-flex">
                <div class id="logo">
                   <a href="index.html">
-                     <h3>Ritik Jain</h3>
+                     <h3><span>R</span>itik Jain</h3>
                   </a>
                </div>
                <nav id="nav-menu-container">
@@ -455,7 +455,7 @@
                      <p class="footer-text"></p>
                      <p class="footer-text">
                         <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-                        Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | This template is made with <i class="fa fa-heart-o" aria-hidden="true"></i> by <a href="https://colorlib.com" target="_blank">Colorlib</a>
+                        Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved
                         <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
                      </p>
                   </div>
