--- a/templates/index.html
+++ b/templates/index.html
@@ -85,7 +85,9 @@
                   <ul class="nav-menu">
                      <li><a href="index.html" >Home</a></li>
                      <li><a href="about.html">About</a></li>
-                     <!-- <li><a href="archive.html" class = "disabled">Portfolio</a></li> -->
+                     <li><a href="certificates.html">Certificates</a></li>
+
+                     <li><a href="portfolio.html" class = "disabled">Portfolio</a></li>
                      <li><a href="RitikResume.pdf" class="genric-btn primary-border circle" target="_blank">Resume</a></li>
                   </ul>
                </nav>
