--- a/templates/certificates.html
+++ b/templates/certificates.html
@@ -53,6 +53,7 @@
 			</script>
 
 
+
 		</head>
 
 		<body>
@@ -60,14 +61,13 @@
 	      <div class="container main-menu">
 	        <div class="row align-items-center justify-content-between d-flex">
 	          <div class id="logo">
-	            <a href="index.html"><h3>Ritik </h3></a>
+	            <a href="/"><h3>Ritik </h3></a>
 	         </div>
 	          <nav id="nav-menu-container">
 	            <ul class="nav-menu">
 	              <li><a href="index.html">Home</a></li>
 	              <li><a href="about.html">About</a></li>
 	              <li><a href="certificates.html">Certificates</a></li>
-
 
 	              <li><a href="portfolio.html" class = "disabled">Portfolio</a></li>
 
@@ -84,9 +84,9 @@
 					<div class="row d-flex align-items-center justify-content-center">
 						<div class="about-content col-lg-12">
 							<h1 class="text-white">
-								About Me
+								Certifications
 							</h1>
-							<p class="text-white link-nav"><a href="/">Home </a>  <span class="lnr lnr-arrow-right"></span>  <a href="about"> About Me</a></p>
+							<p class="text-white link-nav"><a href="/">Home </a>  <span class="lnr lnr-arrow-right"></span>  <a href="about">Certificates</a></p>
 						</div>
 					</div>
 				</div>
@@ -138,18 +138,11 @@
 			    <li>
 			      <div class="content" id = "tile1">
 			      	<script type="text/javascript"> hover_inout("tile1", "detail1");</script>
-			      	<div class="row">
-						  <div class = "col-md-3" style="margin: 25px 0px;">
-			      			<img class="img-fluid mx-auto d-block mb-30" src="img/icon1.png" alt="">
-			      		</div>
-			      		<div class = "col-md-9">
-					        <h4>
-					          <time>Bachelors in Computer Application</time>
-					        </h4>
-					        <p><b><a href = "https://jecrcuniversity.edu.in/" target="_blank">JECRC University (2014 - 2017)</a></b></p>
-					        <p><b>GPA:</b> 8.78 (On a scale of 10.00)</p><br>
-					        </div>
-			        	</div>
+			        <h4>
+			          <time>Bachelors in Computer Application</time>
+			        </h4>
+			        <p><b><a href = "https://jecrcuniversity.edu.in/" target="_blank">JECRC University (2014 - 2017)</a></b></p>
+			        <p><b>GPA:</b> 8.78 (On a scale of 10.00)</p><br>
 			        <div id = "detail1" style = "text-align: center;display: none">
 			        	<p>Studied Software Development, Android Development</p>
 			        </div>
@@ -157,18 +150,12 @@
 			    </li>
 			    <li>
 			      <div class="content", id = "tile2">
-			      	<div class = "row">
-				      	<div class = "col-md-3 " style="margin: 25px 0px;">
-				      		<img class="img-fluid mx-auto d-block mb-30" src="img/icon1.png" alt="">
-				      	</div>
-				      	<div class = "col-md-9">
-					        <h4>
-					          <time>Masters in Computer Application</time>	
-					        </h4>
-									<p><b><a href = "https://vit.ac.in/" target="_blank"> VIT University (2017 - 2019)</a></b></p>
-					        <p>November 2017 - March 2018</p><br>
-				        </div>
-				    </div>
+			      	<img class="img-fluid mx-auto d-block mb-30" src="img/about/c-logo.png" alt="">
+			        <h4>
+			          <time>Masters in Computer Application</time>
+			        </h4>
+							<p><b><a href = "https://vit.ac.in/" target="_blank"> VIT University (2017 - 2019)</a></b></p>
+			        <p>November 2017 - March 2018</p><br>
 			        <div id = "detail2" style = "text-align: center;display: none;">
 			        	<p>Studied Software Development life cycle, IoT and Big Data</p>
 			        </div>
@@ -178,18 +165,12 @@
 
 			    <li>
 			      <div class="content", id = "tile3">
-			      	<div class= "row">
-			      		<div class = "col-md-3" style="margin: 15px 0px;">
-				      		<img class="img-fluid mx-auto d-block mb-50" src="img/coach.png" alt="">
-				      	</div>
-				      	<div class = "col-md-9">
-					        <h4>
-					          <time>Course Mentor</time>
-					        </h4>
-									<p><b><a href = "https://coursera.org" target="_blank"> Coursera </a></b></p>
-					        <p>May 2018 - Present</p><br>
-				    	</div>
-			        </div>
+			      	<img class="img-fluid mx-auto d-block mb-30" src="img/about/c-logo.png" alt="">
+			        <h4>
+			          <time>Course Mentor</time>
+			        </h4>
+							<p><b><a href = "https://coursera.org" target="_blank"> Coursera </a></b></p>
+			        <p>May 2018 - Present</p><br>
 			        <div id = "detail3" style = "text-align: center;display: none;">
 			        	<p>Mentoring for Machine Learning: Regression (University of Washington)</p>
 			        </div>
@@ -199,18 +180,12 @@
 
 			    <li>
 			      <div class="content", id = "tile4">
-			      	<div class = "row">
-			      	<div class = "col-sm-3" style="margin: 25px 0px;"><img class="img-fluid mx-auto d-block mb-30" src="img/work.png" alt=""></div>
-
 			      	<script type="text/javascript"> hover_inout("tile4", "detail4");</script>
-				        <div class = "col-md-9">
-				        <h4>
-				          <time>Data Science Intern</time>
-				        </h4>
-				        <p><b><a href = "https://www.tealindia.in/" target="_blank">Terra Economics and Analytical Labs</a></b></p>
-				        <p>Jan 2019 - May 2019</p><br>
-			        </div>
-			    	</div>
+			        <h4>
+			          <time>Data Science Intern</time>
+			        </h4>
+			        <p><b><a href = "https://www.tealindia.in/" target="_blank">Terra Economics and Analytical Labs</a></b></p>
+			        <p>Jan 2019 - May 2019</p><br>
 			        <div id = "detail4" style = "text-align: center;display: none;">
 			        	<p> Web Scrapping, Data Preparation, Infrastructure Design</p>
 			        </div>
@@ -219,17 +194,12 @@
 					<li>
 					 <div class="content" id = "tile5" >
 					 	<script type="text/javascript"> hover_inout("tile5", "detail5");</script>
-					 	<div class = "row">
-					 		<div class = "col-md-3" style="margin: 25px 0px;">
-			      				<img class="img-fluid mx-auto d-block mb-30" src="img/work.png" alt="">
-			      			</div>
-			      			<div class = "col-md-9">
-								 <h4>
-									 <time>Research Intern</time>
-								 </h4>
-								 <p><b><a href = "http://www.aimlrl.com/" target="_blank">Axis India ML Research Lab</a></b></p>
-								 <p>Jan 2019 - Jul 2019</p>
-							</div>
+						 <h4>
+							 <time>Research Intern</time>
+						 </h4>
+						 <p><b><a href = "http://www.aimlrl.com/" target="_blank">Axis India ML Research Lab</a></b></p>
+						 <p>Jan 2019 - Jul 2019</p>
+
 						 <div id = "detail5" style = "text-align: left;display: none" >
 						 	<br>
 							<p>Machine Learning, Deep Learning for Tabular Datasets</p>
@@ -239,56 +209,36 @@
 				 <li>
 					 <div class="content" id = "tile6">
 					 	<script type="text/javascript"> hover_inout("tile6", "detail6");</script>
-					 	<div class = "row">
-					 		<div class = "col-md-3" style="margin: 25px 0px;">
-				      			<img class="img-fluid mx-auto d-block mb-30" src="img/work.png" alt="">
-				      		</div>
-					      	<div class = "col-md-9">
-							 <h4>
-								 <time>Data Science Intern</time>
-							 </h4>
-							 <p><b><a href = "https://www.nabler.com/" target="_blank"> Nabler Web Solutions </a></b></p>
-							 <p>Aug 2019 - Oct 2019</p><br>
-							</div>
-							<div id = "detail6" style = "text-align: center;display: none">
-							 	<p>Attribution Modelling, Graph Theory, NLP based Recommendation system for Digital Marketing</p>
-							</div>
+						 <h4>
+							 <time>Data Science Intern</time>
+						 </h4>
+						 <p><b><a href = "https://www.nabler.com/" target="_blank"> Nabler Web Solutions </a></b></p>
+						 <p>Aug 2019 - Oct 2019</p><br>
+						 <div id = "detail6" style = "text-align: center;display: none">
+						 	<p>Attribution Modelling, Graph Theory, NLP based Recommendation system for Digital Marketing</p>
+						 </div>
 					 </div>
 				 </li>
 				 <li>
 					 <div class="content" id = "tile7">
 					 	<script type="text/javascript"> hover_inout("tile7", "detail7");</script>
-					 	<div class = "row">
-					 		<div class = "col-md-3" style="margin: 25px 0px;">
-						 	<img class="img-fluid mx-auto d-block mb-30" src="img/work.png" alt="">
-						 	</div>
-						 	<div class = "col-md-9">
-								 <h4>
-									 <time>Freelancer Data Scientist</time>
-								 </h4>
-								 <p>Nov 2019 - Present</p>
-							</div>
-							 <div id = "detail7" style = "text-align: center;display: none">
-							 	<p>AWS Deployment, Machine Learning modelling, NLP based problems</p>
-							 </div>
-						</div>
+						 <h4>
+							 <time>Freelancer Data Scientist</time>
+						 </h4>
+						 <p>Nov 2019 - Present</p>
+						 <div id = "detail7" style = "text-align: center;display: none">
+						 	<p>AWS Deployment, Machine Learning modelling, NLP based problems</p>
+						 </div>
 					 </div>
 				 </li>
 				 <li>
 					 <div class="content" id = "tile8">
 					 	<script type="text/javascript"> hover_inout("tile8", "detail8");</script>
-					 	<div class = "row">
-					 		<div class = "col-md-3" style="margin: 25px 0px;">
-						 		<img class="img-fluid mx-auto d-block mb-30" src="img/work.png" alt="">
-							</div>
-							<div class = "col-md-9">
-								 <h4>
-									 <time>Data Scientist</time>
-								 </h4>
-								 <p><b><a href = "https://www.pichainlabs.com/" target="_blank"> Pichain Innovation Labs </a></b></p>
-								 <p>Jan 2020 - Present</p><br>
-							</div>
-						 </div>
+						 <h4>
+							 <time>Data Scientist</time>
+						 </h4>
+						 <p><b><a href = "https://www.pichainlabs.com/" target="_blank"> Pichain Innovation Labs </a></b></p>
+						 <p>Jan 2020 - Present</p><br>
 						 <div id = "detail8" style = "text-align: center;display: none">
 						 	<p>Cloud Based ML Pipelines, Machine Learning, Deep Learning, Doker, NLP, Graph Theory, Set theory</p>
 						 </div>
@@ -332,6 +282,8 @@
 										</dd>
 
 									</div>
+								</div>
+							</div>
 						</section>
 
 </div>
@@ -341,26 +293,31 @@
 						<footer class="footer-area section-gap">
 								<div class="container">
 										<div class="row">
-													<div class="col-lg-2 col-md-6 col-sm-6 social-widget">
+												<div class="col-lg-5 col-md-6 col-sm-6">
+														<div class="single-footer-widget">
+																<h4>About This Page</h4>
+																<p class="footer-text">
+																		This website was coded in HTML, CSS, and Javascript based on a theme from Colorlib. It is hosted on AWS Lambda. 
+																</p>
+																<p class="footer-text"><!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
+			Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | This template is made with <i class="fa fa-heart-o" aria-hidden="true"></i> by <a href="https://colorlib.com" target="_blank">Colorlib</a>
+			<!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. --></p>
+														</div>
+												</div>
+
+												<div class="col-lg-2 col-md-6 col-sm-6 social-widget">
 														<div class="single-footer-widget">
 																<h4>Connect with Me</h4>
 																<p>Let's be social. </p>
 																<div class="footer-social d-flex align-items-center">
+																		<!-- <a href="https://medium.com/@harrisonjansma"><i class="fa fa-medium"></i></a> -->
 																		<a href="http://www.linkedin.com/in/ritikjain51" target="_blank"><i class="fa fa-linkedin"></i></a>
 																		<a href="https://github.com/ritikjain51" target="_blank"><i class="fa fa-github"></i></a>
 																		<a href = "https://www.medium.com/@ritikjain51" target="_blank"><i class = "fa fa-medium"></i></a>
 
 																</div>
 														</div>
-
-													</div>
-
-													<div  class="col-lg-5 col-md-9 col-sm-6">
-														<div class="mapouter">
-															<div class="gmap_canvas">
-																<iframe width="500" height="300" id="gmap_canvas" src="https://maps.google.com/maps?q=Bengalore&t=&z=12&ie=UTF8&iwloc=&output=embed" frameborder="0" scrolling="no" marginheight="0" marginwidth="0"></iframe>
-																</div><style>.mapouter{position:relative;text-align:right;height:500px;width:715px;}.gmap_canvas {overflow:hidden;background:none!important;height:500px;width:715px;}</style></div>
-														</div>
+												</div>
 										</div>
 								</div>
 						</footer>
@@ -369,7 +326,8 @@
 
 			<script src="js/vendor/jquery-2.2.4.min.js"></script>
 			<script src="js/popper.min.js"></script>
-			<script src="js/vendor/bootstrap.min.js"></script>	
+			<script src="js/vendor/bootstrap.min.js"></script>
+			<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBhOdIF3Y9382fqJYt5I_sswSrEw5eihAA"></script>
   			<script src="js/easing.min.js"></script>
 			<script src="js/hoverIntent.js"></script>
 			<script src="js/superfish.min.js"></script>
