--- a/templates/portfolio.html
+++ b/templates/portfolio.html
@@ -40,12 +40,12 @@
 					 </div>
 						<nav id="nav-menu-container">
 							<ul class="nav-menu">
-								<li><a href="/">Home</a></li>
-								<li><a href="about">About</a></li>
+								<li><a href="index.html">Home</a></li>
+								<li><a href="about.html">About</a></li>
+								<li><a href="certificates.html">Certificates</a></li>
 
 
-								<li><a href="archive">Portfolio</a>
-								</li>
+								<li><a href="portfolio.html" class = "disabled">Portfolio</a></li>
 
 
 								<li><a href="HarrisonJansmaResume.pdf" class="genric-btn primary-border circle" target="_blank">Resume</a></li>
